<resources>
    <string name="app_name">Digital Academy</string>
    <string name="faculty">Faculty</string>
    <string name="admin">Admin</string>
    <string name="sars">SARS</string>
    <string name="todo">TODO</string>
    <string name="student">Student</string>
    <string name="welcome">Welcome !!!</string>
    <string name="register_number">Register Number :</string>
    <string name="password">Password :</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="check_new_user">If you are a new user</string>
    <string name="signup">Signup</string>
    <string name="faculty_code">Faculty Code :</string>
    <string name="code">Code :</string>
    <string name="notes">NOTES</string>
    <string name="gpa_calculator">GPA CALCULATOR</string>
    <string name="attendance">ATTENDANCE</string>
    <string name="circular">CIRCULAR</string>
    <string name="other_college_events_ad">Other college events / ad</string>
    <string name="about_us">About Us</string>
    <string name="info">Info</string>
    <string name="college_name">College Name</string>
    <string name="menu_type">Menu Type</string>
    <string name="department">Department :</string>
    <string name="semester">Semester :</string>
    <string name="subject">Subject :</string>
    <string name="proceed">Proceed</string>
    <string name="computer_science_engineering">Computer Science Engineering</string>
    <string name="select_your_semester">Select your Semester :</string>
    <string name="calculate_gpa">Calculate GPA</string>
    <string name="to_see_other_department_grades">To see other department grades :</string>
    <string name="click_here">Click here</string>
    <string name="enter_here">Enter here :</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_has_been_sent_to_the_following_mobile_number">OTP has been sent to the following mobile number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_the_otp">Enter the OTP:</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="create_password">Create Password:</string>
    <string name="save">Save</string>
    <string name="enter_your_register_number">Enter your Register Number:</string>
    <string name="enter_your_staff_code">Enter your Staff Code:</string>
    <string name="otp_has_been_sent_to_your_phone_number">OTP has been sent to your phone number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hi">"Hi, "</string>
    <string name="d_o_b">D-O-B :</string>
    <string name="e_mail_id">E-Mail ID :</string>
    <string name="enter_all_the_data">Enter all the data…</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name :</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="sign_up">Sign Up</string>
    <string name="button_to_add_circular">Button to add circular</string>
    <string name="to_view_pdf_attachment">To view PDF attachment</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="key">Key :</string>
    <string name="add_faculty">Add Faculty</string>
    <string name="add_events">Add Events</string>
    <string name="sars_innovate_educate">SARS Innovate Educate</string>
    <string name="upload">Upload</string>
    <string name="enter_the_notes_name">Enter the notes name:</string>
    <string name="enter_some_tags_for_the_notes">Enter some tags for the notes:</string>
    <string name="click_here_to_upload_pdf">Click here to upload PDF</string>
    <string name="notes_section">Notes Section</string>
    <string name="notes_upload">Notes Upload</string>
    <string name="invalid_user_flag">Invalid User Flag</string>
    <string name="grade_calculation">Grade Calculation</string>
    <string name="attendance_entry">Attendance Entry</string>
    <string name="invalid_menu_type">Invalid Menu Type</string>
    <string name="registerNumber">Title :</string>
    <string name="conducted">Description :</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="the_subject_selected_has_not_uploaded_yet">The subject selected has not uploaded yet.</string>
    <string name="total_hours_conducted">Total Hours Conducted :</string>
    <string name="hours_present">Hours Present :</string>
    <string name="percentage">Percentage :</string>
    <string name="if_any_error_in_the_above_data">If any error in the above data,</string>
    <string name="contact_admin">contact admin</string>
    <string name="this_app_was_developed_by">This app was developed by</string>
    <string name="sars_develops">SARS Develops</string>
    <string name="supported_by_santhosh_senior">Supported by, Santhosh (Senior)</string>
    <string name="contact_us">Contact Us</string>
    <string name="rohith">Rohith</string>
    <string name="sarath">Sarath</string>
    <string name="sathish">Sathish</string>
    <string name="ashfaq">Ashfaq</string>
    <string name="edit_your_info">Edit your Info</string>
    <string name="change_password">Change Password</string>
    <string name="modify">Modify</string>
    <string name="staff_code">Staff Code :</string>
    <string name="college">College :</string>
    <string name="college_code">College Code :</string>
    <string name="total_working_days">Total Working Days :</string>
    <string name="hyphen">-</string>
    <string name="plus">+</string>
    <string name="number_of_days_present">Number of days present :</string>
    <string name="done">Done</string>
    <string name="enter_the_register_number">Enter the Register Number :</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
</resources>