<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_info_page"
    android:orientation="vertical"
    tools:context=".InfoPage">

    <ImageView
        android:id="@+id/ivDevLogo"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/sars_innovate_educate"
        app:srcCompat="@drawable/sars_logo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff9933"
        android:gravity="center"
        android:text="@string/this_app_was_developed_by"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#138808"
        android:gravity="center"
        android:text="@string/sars_develops"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <ImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo"
        android:src="@drawable/img_product_banner" />

    <TextView
        android:id="@+id/tvDevelopers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#9C27B0"
        android:textSize="30sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/supported_by_santhosh_senior"
        android:textColor="#9C27B0"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btnContactUs"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableStart="@drawable/ic_call"
        android:text="@string/contact_us"
        android:textColor="#E5E80B"
        android:textSize="20sp"
        android:textStyle="italic"
        app:backgroundTint="#123456" />

</LinearLayout>
