<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sign_up"
    android:orientation="vertical"
    tools:context=".EditStudentInfo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/edit_your_info"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#0E73E1"
        android:textColorLink="#E1DBDB"
        android:textSize="30sp"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:divider="@color/black"
            android:dividerPadding="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp"
            android:showDividers="middle">

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#555555"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                android:textColorHint="#555555" />

            <EditText
                android:id="@+id/etRegisterNumber"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/register_number"
                android:inputType="number"
                android:maxLength="12"
                android:textColor="@color/black"
                android:textColorHint="#555555" />

            <EditText
                android:id="@+id/etDepartment"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/department"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#555555" />

            <EditText
                android:id="@+id/etDob"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/d_o_b"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#555555" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textColorHint="#555555" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/e_mail_id"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="#555555" />

            <TextView
                android:id="@+id/tvChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnModify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/modify"
                android:textColor="#FFFFFF"
                app:backgroundTint="#0027FF" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>